fix: Chart style in Dark Mode (#12751)

--- a/frappe/public/scss/desk/dark.scss
+++ b/frappe/public/scss/desk/dark.scss
@@ -114,19 +114,21 @@
 	// --criticism-bg: var(--red-600);
 
 	// Frappe Charts Colors
-	--charts-label-color: var(--gray-300);
-	--charts-axis-line-color: var(--gray-500);
+	.chart-container {
+		--charts-label-color: var(--gray-300);
+		--charts-axis-line-color: var(--gray-500);
 
-	--charts-stroke-width: 5px;
-	--charts-dataset-circle-stroke: #ffffff;
-	--charts-dataset-circle-stroke-width: var(--charts-stroke-width);
+		--charts-stroke-width: 5px;
+		--charts-dataset-circle-stroke: #ffffff;
+		--charts-dataset-circle-stroke-width: var(--charts-stroke-width);
 
-	--charts-tooltip-title: var(--charts-label-color);
-	--charts-tooltip-label: var(--charts-label-color);
-	--charts-tooltip-value: white;
-	--charts-tooltip-bg: var(--gray-900);
+		--charts-tooltip-title: var(--charts-label-color);
+		--charts-tooltip-label: var(--charts-label-color);
+		--charts-tooltip-value: white;
+		--charts-tooltip-bg: var(--gray-900);
 
-	--charts-legend-label: var(--charts-label-color);
+		--charts-legend-label: var(--charts-label-color);
+	}
 
 	// find better fix
 	.heatmap-chart {
